--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   margin: 0;
   border: 0;
   outline: 0;
-  background-color: inherit;
+  /* background-color: inherit; */
   color: inherit;
   font-family: inherit;
   font-size: inherit;
