--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -64,3 +64,31 @@ display: none;
     margin-top: 2em;
   }
 }
+
+
+
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-item-left {
+
+  flex: 50%;
+  margin-top: 3.6em;
+}
+
+.flex-item-right {
+  
+  flex: 50%;
+}
+@media (max-width: 600px) {
+  .flex-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .flex-item-right {
+  margin-left: -2em;
+  flex: 50%;
+}
+}
